<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/title"
        style="@style/TextStyleFontSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/close"
        android:gravity="center"
        android:text="@string/enter_mobile_number"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_close_24px"
        android:contentDescription="@string/image_close_content_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:hint="@string/mobile_number"
        app:boxBackgroundMode="outline"
        app:helperTextTextColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/blue"
        app:prefixText="@string/country_code"
        app:prefixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="phone"
            android:maxLength="10"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/why_needed"
        style="@style/TextStyleFontSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_layout"
        android:layout_marginTop="10dp"
        android:text="@string/why_is_it_needed"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/why_needed"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/validate_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/why_needed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit" />

</RelativeLayout>