<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_24px" />

    <ImageView
        android:id="@+id/ic_state"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_syncing" />

    <TextView
        android:id="@+id/tv_sync_title"
        style="@style/TextStyleFontSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/syncing_data"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_sync_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/syncing_data_detail"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel"
        android:textSize="14sp" />

</LinearLayout>